--- a/environment.yml
+++ b/environment.yml
@@ -6,8 +6,10 @@ channels:
   - bioconda
 
 dependencies:
- - r-base=4.1.3
- - wget=1.21.4 
+ - r-base=4.1.2
+ - wget=1.21.3 
  - r-tidyverse=2.0.0
  - snakemake=8.20.3
- - graphviz=12.0.0
+ - graphviz=11.0.0
+ - r-otparse= 1.7.5  
+ 
