--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-data/
+#for privacy issues
+data/ 
+#temporally 
+code/single_cell_roth.Rmd 
 
 # History files
 .Rhistory
@@ -56,7 +59,6 @@ rsconnect/
 
 #Ignore scRNAseq GEO data
 data/GSE*
-
 
 #Ignore README.html
 README.html
